--- a/Portfolio.css
+++ b/Portfolio.css
@@ -115,7 +115,7 @@ color:blue;
 
 /* import images and position them */
 .parallax-img1{
-  background-image: url('///Users/Yousuf/Desktop/portfolio/img2.jpg');
+  background-image: url('https://photos.google.com/album/AF1QipPRSA8dioDrx7t2ej9CJMpBEMSGHSmyatMN6KJ0/photo/AF1QipOqvnZnWwsV3Lk_SwMCO_HKu3o1VAKUMw0ji5go');
   min-height: 100%;
 }
 
