--- a/Portfolio.css
+++ b/Portfolio.css
@@ -120,12 +120,12 @@ color:blue;
 }
 
 .parallax-img2{
-  background-image: url('///Users/Yousuf/Desktop/portfolio/img1.jpg');
+  background-image: url('https://photos.google.com/album/AF1QipPRSA8dioDrx7t2ej9CJMpBEMSGHSmyatMN6KJ0/photo/AF1QipOqvnZnWwsV3Lk_SwMCO_HKu3o1VAKUMw0ji5go');
   min-height: 400px;
 }
 
 .parallax-img3{
-  background-image: url('///Users/Yousuf/Desktop/portfolio/img3.jpg');
+  background-image: url('https://photos.google.com/album/AF1QipPRSA8dioDrx7t2ej9CJMpBEMSGHSmyatMN6KJ0/photo/AF1QipOqvnZnWwsV3Lk_SwMCO_HKu3o1VAKUMw0ji5go');
   min-height: 400px;
 }
 
