--- a/Portfolio.css
+++ b/Portfolio.css
@@ -115,7 +115,7 @@ color:blue;
 
 /* import images and position them */
 .parallax-img1{
-  backgroun-image :url('///Users/Yousuf/Desktop/Portfolio/Img/img1.jpg');
+  background-image :url('///Users/Yousuf/Desktop/Portfolio/Img/img1.jpg');
   min-height: 100%;
 }
 
