--- a/Portfolio.css
+++ b/Portfolio.css
@@ -120,12 +120,12 @@ color:blue;
 }
 
 .parallax-img2{
-  background-image: url('https://imgur.com/a/TsagPMp');
+  background-image: url('https://yousufafroze.github.io/Portfolio/Img/img2.jpg');
   min-height: 400px;
 }
 
 .parallax-img3{
-  background-image: url('https://imgur.com/a/TsagPMp');
+  background-image: url('https://yousufafroze.github.io/Portfolio/Img/img3.jpg');
   min-height: 400px;
 }
 
