--- a/Portfolio.css
+++ b/Portfolio.css
@@ -125,7 +125,7 @@ color:blue;
 } */
 
 .parallax-img2{
-  background-image: url('https://yousufafroze.github.io/Portfolio/Img/portfolio_img1.JPG');
+  background-image: url('https://yousufafroze.github.io/Portfolio/Img/portfolio_img2.jpg');
   min-height: 400px;
 }
 
