--- a/Portfolio.css
+++ b/Portfolio.css
@@ -129,10 +129,10 @@ color:blue;
   min-height: 400px;
 } */
 
-/* .parallax-img3{
-  background-image: url('https://yousufafroze.github.io/Portfolio/Img/img3.jpg');
+.parallax-img3{
+  background-image: url('https://yousufafroze.github.io/Portfolio/Img/portfolio_img1.JPG');
   min-height: 400px;
-} */
+}
 
 
 /* Section Styling */
