--- a/Portfolio.css
+++ b/Portfolio.css
@@ -131,7 +131,7 @@ color:blue;
 
 .parallax-img3{
   background-image: url('https://yousufafroze.github.io/Portfolio/Img/portfolio_img1.JPG');
-  min-height: 400px;
+  min-height: 100%;
 }
 
 
