--- a/Portfolio.css
+++ b/Portfolio.css
@@ -130,7 +130,7 @@ color:blue;
 }
 
 .parallax-img3{
-  background-image: url('https://yousufafroze.github.io/Portfolio/Img/img3.jpg');
+  background-image: url('https://yousufafroze.github.io/Portfolio/Img/portfolio_img1.JPG');
   min-height: 100%;
 }
 
