--- a/Portfolio.css
+++ b/Portfolio.css
@@ -115,7 +115,7 @@ color:blue;
 
 /* import images and position them */
 .parallax-img1{
-  background-image :url('https://yousufafroze.github.io/Portfolio/Img/img1.jp');
+  background-image :url('https://yousufafroze.github.io/Portfolio/Img/thank_you.jpg');
   min-height: 100%;
 }
 
