--- a/Portfolio.css
+++ b/Portfolio.css
@@ -80,10 +80,10 @@ h2 a{
 }
 
 h2 a:hover{
-  color:#cfdbff;
+  color:#7d9cfa;
 }
 h2{
-  color: #ff90bb;
+  color: #ffffff;
   font-weight: bold;
   margin: 0px;
   padding: 0px;
